# libforchess

./: .gitignore  LICENSE  Makefile  README  configure  configure.in
docs/: Doxyfile
example/: game.c  simple.c  simple.fc
examples/: README
examples/cli/: simple.c
include/: config.h  config.h.in
include/forchess/: ai.h  board.h  fifo.h  game.h  moves.h  threads.h
src/: ai.c  board.c  check.c  fifo.c  forchess.c  forchess.h  game.c  moves.c  threads.c  threats.c
src/forchess/: ai.h  board.h  game.h  moves.h
test/: check_ai.c  check_board.c  check_check.c  check_fifo.c  check_forchess.c  check_game.c  check_moves.c  check_threads.c
test/boards/: test_ai_is_move_valid.1  test_ai_next_move.1  test_ai_next_move.2  test_ai_score_position.1  test_forchess_board_get_valid_moves.1  test_forchess_board_get_valid_moves.2  test_forchess_board_get_valid_removes.1  test_forchess_board_get_valid_removes.2  test_forchess_board_get_valid_removes.3  test_forchess_board_setup.1  test_forchess_board_setup.2  test_forchess_board_setup.3  test_forchess_board_setup.4  test_forchess_board_setup.5  test_forchess_check_bug.1  test_forchess_game_is_move_valid.2  test_forchess_game_is_move_valid.3  test_forchess_game_opp_check_status.1  test_forchess_make_move.1  test_forchess_pawn_checks.1
