#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([libforchess], [0.8.4], [https://github.com/jazzyb/libforchess/issues])
AC_CONFIG_SRCDIR([src/])
AC_CONFIG_HEADER(include/config.h)

# Checks for programs.
AC_PROG_CC
AC_PROG_RANLIB

# Checks for libraries.
AC_CHECK_LIB([check], [srunner_create])

# Checks for header files.
AC_CHECK_HEADERS([limits.h stdint.h stdlib.h string.h strings.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_INT32_T
AC_TYPE_UINT32_T
AC_TYPE_UINT64_T

# Checks for library functions.
AC_CHECK_FUNCS([bzero memmove strtol])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
